--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "node-schedule": "^1.3.2",
     "request": "^2.88.0",
     "superagent": "^5.1.1"
+  },
+  "dependencies": {
+    "nodemailer": "^6.3.1"
   }
 }
