--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "node-schedule": "^1.3.2",
+    "pm2": "^4.2.3",
     "request": "^2.88.0",
     "superagent": "^5.1.1"
   },
   "dependencies": {
     "nodemailer": "^6.3.1"
+  },
+  "scripts": {
+    "start": "pm2 start index.js"
   }
 }
